--- a/Resources/Prototypes/Loadouts/Jobs/Medical/medical_doctor.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/medical_doctor.yml
@@ -20,7 +20,7 @@
 
 # Head
 
-- type: loadout
+- type: itemLoadout
   id: MedicalHeadMirror
   equipment: MedicalHeadMirror
 # WD edit - removed timer from mirror
