--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -66,9 +66,7 @@
   - type: Puller
   - type: StandingState
   - type: Alerts
-  - type: Tag
-    tags:
-      - ShoesRequiredStepTriggerImmune
+  - type: StepTriggerImmune
 
 - type: entity
   name: drone
@@ -174,9 +172,9 @@
     softness: 1
     mask: /Textures/Effects/LightMasks/cone.png
     autoRot: true
+  - type: StepTriggerImmune
   - type: Tag
     tags:
-      - ShoesRequiredStepTriggerImmune
       - CannotSuicide
 
 - type: entity
