--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -93,7 +93,7 @@
 
 - type: entity
   name: C-20r sub machine gun
-  parent: [BaseWeaponSubMachineGun, BaseGunWieldable]
+  parent: [BaseWeaponSubMachineGun]
   id: WeaponSubMachineGunC20r
   description: A firearm that is often used by the infamous nuclear operatives. Uses .35 auto ammo.
   components:
@@ -119,8 +119,8 @@
   - type: Item
     sprite: White/Objects/Weapons/Guns/SMG/c20r-inhands.rsi
   - type: Gun
-    minAngle: 21
-    maxAngle: 32  
+    minAngle: 11
+    maxAngle: 19
     shotsPerBurst: 5
     availableModes:
     - SemiAuto
@@ -191,7 +191,7 @@
 
 - type: entity
   name: Drozd
-  parent: [BaseWeaponSubMachineGun, BaseGunWieldable]
+  parent: [BaseWeaponSubMachineGun]
   id: WeaponSubMachineGunDrozd
   description: An excellent fully automatic Heavy SMG.
   components:
@@ -218,7 +218,7 @@
       sprite: White/Objects/Weapons/Guns/SMG/drozd-inhands.rsi
     - type: Gun
       minAngle: 21
-      maxAngle: 32  
+      maxAngle: 32
       fireRate: 6
       selectedMode: FullAuto
       soundGunshot:
