--- a/Resources/Prototypes/_CM14/Entities/Surgery/cm_surgery_steps.yml
+++ b/Resources/Prototypes/_CM14/Entities/Surgery/cm_surgery_steps.yml
@@ -1,7 +1,6 @@
 ﻿- type: entity
   id: CMSurgeryStepBase
-  categories:
-  - hideSpawnMenu
+  noSpawn: true
   components:
   - type: CMSurgeryStep
 
