--- a/Resources/Prototypes/_White/Aspects/Aspects.yml
+++ b/Resources/Prototypes/_White/Aspects/Aspects.yml
@@ -111,8 +111,7 @@
       name: No engine
       description: Какой-то смышлённый агент синдиката решил украсть все ваши генераторы энергии целиком
       weight: 2
-      forbidden: true
-      hidden: true
+      isForbidden: true
       startAudio:
         path: /Audio/White/Aspects/accent.ogg
     - type: NoEngineAspect
@@ -179,8 +178,7 @@
       name: I Have Two Butts But I must Seat
       description: Стулья украли!
       weight: 3
-      forbidden: true
-      hidden: true
+      isForbidden: true
       startAudio:
         path: /Audio/White/Aspects/accent.ogg
     - type: ChairLeakAspect
@@ -286,8 +284,7 @@
       name: Stolen Floor
       description: Рабочие забыли положить плитку при строительстве станции
       weight: 3
-      forbidden: true
-      hidden: true
+      isForbidden: true
       startAudio:
         path: /Audio/White/Aspects/accent.ogg
     - type: StolenFloorAspect
@@ -301,8 +298,7 @@
       name: Are We In Dungeon
       description: В связи с невероятной хрупкостью окон было решено заменить их на стены
       weight: 3
-      forbidden: true
-      hidden: true
+      isForbidden: true
       startAudio:
         path: /Audio/White/Aspects/accent.ogg
     - type: WindowLeakAspect
