--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -157,6 +157,7 @@
     duration: 240
   - type: KudzuGrowthRule
 
+# Added MobMouse to specialEntries list to reduce RatKing spawn
 - type: entity
   id: MouseMigration
   parent: BaseGameRule
@@ -183,7 +184,7 @@
     specialEntries:
     - id: SpawnPointGhostRatKing
       prob: 0.001
-    - id: MobMouse
+    - id: MobMouse # WD
       prob: 0.02
 
 - type: entity
