--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/chaplain_weapons.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/chaplain_weapons.yml
@@ -1,11 +1,17 @@
 # Так как мечей много, а смысла в них не очень - я буду писать в комментариях геймдизайнерских прикол каждого из них
 
 - type: entity
-  parent: BaseHolyWeapon
+  parent: BaseItem
   id: BaseHolyWeapon
   abstract: true
   components:
   - type: HolyWeapon
+  - type: Sprite
+    sprite: White/Objects/Weapons/Chaplain/forceweapon.rsi
+    state: icon
+  - type: MeleeWeapon
+    soundHit:
+      path: /Audio/Weapons/bladeslice.ogg
 
 # Базовая палка, чтобы как можно быстрее сменить ее.
 - type: entity
@@ -114,8 +120,13 @@
   components:
   - type: Sprite
     sprite: White/Objects/Weapons/Chaplain/chainsword.rsi
+    state: icon
   - type: Clothing
     sprite: White/Objects/Weapons/Chaplain/chainsword.rsi
+    slots:
+    - back
+    - belt
+    - suitStorage
   - type: Item
     sprite: White/Objects/Weapons/Chaplain/chainsword.rsi
   - type: MeleeWeapon
@@ -298,7 +309,8 @@
   - type: MeleeWeapon
     soundHit:
       path: /Audio/White/Items/hit/chainhit.ogg
-    range: 2.5
+    range: 1.5
+    attackRate: 0.5
     damage:
       types:
         Blunt: 10
@@ -312,7 +324,7 @@
   - type: DisarmMalus
   - type: KnockDownOnHit
     knockDownBehavior: NoDrop
-    knockdownTime: 1
+    knockdownTime: 0.4
 
 # Отбрасывает при ударе и может блокировать, требует держать себя в двух руках для отброса
 - type: entity
@@ -337,6 +349,8 @@
     damage:
       types:
         Blunt: 6
+    soundHit:
+      collection: MetalThud
   - type: Wieldable
   - type: IncreaseDamageOnWield
     damage:
@@ -358,6 +372,36 @@
   name: нечестивые вилы
   description: Держа это, ты выглядишь абсолютно по дьявольски.
   components:
+  - type: Sprite
+    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
+    state: icon
+  - type: Item
+    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
+    size: Huge
+  - type: Clothing
+    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
+    slots:
+    - back
+    - suitStorage
+  - type: MeleeWeapon
+    range: 2
+    wideAnimationRotation: -135
+    damage:
+      types:
+        Piercing: 8
+    angle: 0
+    animation: WeaponArcThrust
+    soundHit:
+      path: /Audio/Weapons/bladeslice.ogg
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Piercing: 77
+  - type: Wieldable
+  - type: IncreaseDamageOnWield
+    damage:
+      types:
+        Piercing: 4
   - type: EmbeddableProjectile
     offset: 0.15,0.15
   - type: ThrowingAngle
@@ -377,36 +421,6 @@
         restitution: 0.3
         friction: 0.2
   - type: Sharp
-  - type: Sprite
-    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
-    state: icon
-  - type: MeleeWeapon
-    range: 2
-    wideAnimationRotation: -135
-    damage:
-      types:
-        Piercing: 8
-    angle: 0
-    animation: WeaponArcThrust
-    soundHit:
-      path: /Audio/Weapons/bladeslice.ogg
-  - type: DamageOtherOnHit
-    damage:
-      types:
-        Piercing: 77
-  - type: Item
-    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
-    size: Huge
-  - type: Clothing
-    sprite: White/Objects/Weapons/Chaplain/pitchfork.rsi
-    slots:
-    - back
-    - suitStorage
-  - type: Wieldable
-  - type: IncreaseDamageOnWield
-    damage:
-      types:
-        Piercing: 4
   - type: UseDelay
   - type: DisarmMalus
 
@@ -458,6 +472,8 @@
     damage:
       types:
         Blunt: 4
+    soundHit:
+      collection: HyperToolUsing
   - type: Item
     size: Normal
     sprite: White/Objects/Weapons/Chaplain/hypertool.rsi
