--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -108,7 +108,7 @@
   - type: Reflect
     reflectProb: 1
     innate: true # armor grants a passive shield that does not require concentration to maintain
-    howToUse:  # WD
+    placement:  # WD
       - Body
     reflects:
       - Energy
