--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -101,7 +101,7 @@
     reflectProb: 0.3
     velocityBeforeNotMaxProb: 6.0 # don't punish ninjas for being ninjas
     velocityBeforeMinProb: 10.0
-    howToUse:  # WD
+    placement:  # WD
       - Hands
   - type: MeleeBlock
     delay: 6.1
