--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -4,28 +4,28 @@
   name: research point disk (1000)
   description: A disk for the R&D server containing 1000 points.
   components:
-    - type: Item
-      size: Tiny
-      shape:
-        - 0, 0, 0, 0 # WD
-    - type: Sprite
-      sprite: White/Objects/Specific/Research/researchdisk.rsi # WD
-      state: icon
-    - type: ResearchDisk
-    - type: GuideHelp
-      guides:
-        - Science
-      # WD edit sounds start
-    - type: EmitSoundOnPickup
-      sound:
-        path: /Audio/White/Items/handling/disk_pickup.ogg
-    - type: EmitSoundOnDrop
-      sound:
-        path: /Audio/White/Items/handling/disk_drop.ogg
-    - type: EmitSoundOnLand
-      sound:
-        path: /Audio/White/Items/handling/disk_drop.ogg
-      # WD edit sounds end
+  - type: Item
+    size: Small
+    shape:
+    - 0, 0, 0, 0 # WD
+  - type: Sprite
+    sprite: White/Objects/Specific/Research/researchdisk.rsi # WD
+    state: icon
+  - type: ResearchDisk
+  - type: GuideHelp
+    guides:
+    - Science
+    # WD edit sounds start
+  - type: EmitSoundOnPickup
+    sound:
+      path: /Audio/White/Items/handling/disk_pickup.ogg
+  - type: EmitSoundOnDrop
+    sound:
+      path: /Audio/White/Items/handling/disk_drop.ogg
+  - type: EmitSoundOnLand
+    sound:
+      path: /Audio/White/Items/handling/disk_drop.ogg
+    # WD edit sounds end
 
 - type: entity
   parent: ResearchDisk
@@ -33,8 +33,8 @@
   name: research point disk (5000)
   description: A disk for the R&D server containing 5000 points.
   components:
-    - type: ResearchDisk
-      points: 5000
+  - type: ResearchDisk
+    points: 5000
 
 - type: entity
   parent: ResearchDisk
@@ -42,8 +42,8 @@
   name: research point disk (10000)
   description: A disk for the R&D server containing 10000 points.
   components:
-    - type: ResearchDisk
-      points: 10000
+  - type: ResearchDisk
+    points: 10000
 
 - type: entity
   parent: ResearchDisk
@@ -52,8 +52,8 @@
   suffix: DEBUG, DO NOT MAP
   description: A disk for the R&D server containing all the points you could ever need.
   components:
-    - type: ResearchDisk
-      unlockAllTech: true
+  - type: ResearchDisk
+    unlockAllTech: true
 
 - type: entity
   parent: BaseItem
@@ -61,37 +61,37 @@
   name: technology disk
   description: A disk for the R&D server containing research technology.
   components:
-    - type: Sprite
-      sprite: Objects/Misc/module.rsi
-      layers:
-        - state: datadisk_base
-          map: ["enum.DamageStateVisualLayers.Base"]
-        - state: datadisk_label
-    - type: RandomSprite
-      available:
-        - enum.DamageStateVisualLayers.Base:
-            datadisk_base: Sixteen
-    - type: TechnologyDisk
-    - type: StaticPrice
-      price: 100
-    - type: StealTarget
-      stealGroup: TechnologyDisk
-      # WD edit sounds start
-    - type: EmitSoundOnPickup
-      sound:
-        path: /Audio/White/Items/handling/disk_pickup.ogg
-    - type: EmitSoundOnDrop
-      sound:
-        path: /Audio/White/Items/handling/disk_drop.ogg
-    - type: EmitSoundOnLand
-      sound:
-        path: /Audio/White/Items/handling/disk_drop.ogg
-      # WD edit sounds end
+  - type: Sprite
+    sprite: Objects/Misc/module.rsi
+    layers:
+    - state: datadisk_base
+      map: ["enum.DamageStateVisualLayers.Base"]
+    - state: datadisk_label
+  - type: RandomSprite
+    available:
+    - enum.DamageStateVisualLayers.Base:
+        datadisk_base: Sixteen
+  - type: TechnologyDisk
+  - type: StaticPrice
+    price: 100
+  - type: StealTarget
+    stealGroup: TechnologyDisk
+    # WD edit sounds start
+  - type: EmitSoundOnPickup
+    sound:
+      path: /Audio/White/Items/handling/disk_pickup.ogg
+  - type: EmitSoundOnDrop
+    sound:
+      path: /Audio/White/Items/handling/disk_drop.ogg
+  - type: EmitSoundOnLand
+    sound:
+      path: /Audio/White/Items/handling/disk_drop.ogg
+    # WD edit sounds end
 
 - type: entity
   parent: TechnologyDisk
   id: TechnologyDiskRare
   suffix: rare.
   components:
-    - type: TechnologyDisk
-      tierWeightPrototype: RareTechDiskTierWeights
+  - type: TechnologyDisk
+    tierWeightPrototype: RareTechDiskTierWeights
