--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -61,6 +61,10 @@
   name: technology disk
   description: A disk for the R&D server containing research technology.
   components:
+  - type: Item # WD
+    size: Small
+    shape:
+    - 0, 0, 0, 0
   - type: Sprite
     sprite: Objects/Misc/module.rsi
     layers:
