--- a/Resources/Prototypes/Research/civilianservices.yml
+++ b/Resources/Prototypes/Research/civilianservices.yml
@@ -106,8 +106,8 @@
     sprite: Mobs/Silicon/chassis.rsi
     state: medical
   discipline: CivilianServices
-  tier: 1
-  cost: 7500
+  tier: 1 # WD from 2 to 1
+  cost: 10000
   recipeUnlocks:
   - BorgModuleAdvancedTreatment
   - BorgModuleDefibrillator
@@ -213,7 +213,7 @@
     sprite: Structures/cargo_telepad.rsi
     state: display
   discipline: CivilianServices
-  tier: 3
+  tier: 3 # WD from 2 to 3
   cost: 15000
   recipeUnlocks:
   - CargoTelepadMachineCircuitboard
@@ -226,7 +226,7 @@
     state: icon
   discipline: CivilianServices
   tier: 3
-  cost: 15000
+  cost: 15000 # WD from 10000 to 15000
   recipeUnlocks:
   - ClothingShoesBootsSpeed
 
@@ -238,7 +238,7 @@
     state: beakerbluespace
   discipline: CivilianServices
   tier: 3
-  cost: 15000
+  cost: 15000 # WD from 10000 to 15000
   recipeUnlocks:
   - BluespaceBeaker
   - SyringeBluespace
