--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
@@ -8,7 +8,7 @@
     - ShellResinShotgun
   - type: Sprite
     layers:
-    - state: resin
+    - state: rubber
       map: [ "enum.AmmoVisualLayers.Base" ]
   - type: CartridgeAmmo
     proto: PelletShotgunResinShot
