Maybe this time

--- a/Resources/Prototypes/Entities/Structures/Piping/Disposal/units.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Disposal/units.yml
@@ -64,6 +64,9 @@
   - type: StaticPrice
     price: 62
   - type: PowerSwitch
+  - type: Tag # WD EDIT
+    tags:
+    - DisposalUnit
 
 - type: entity
   id: DisposalUnit
