--- a/Resources/Prototypes/_White/JukeboxSongs/LobbySongs.yml
+++ b/Resources/Prototypes/_White/JukeboxSongs/LobbySongs.yml
@@ -6,279 +6,405 @@
 
 # Songs
 - type: jukebox # WD
-  id: SpaceOddity
-  name: Song - Space Oddity
+  id: SpaceOddityJukebox
+  name: "Song - Space Oddity"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceOddity.ogg
 
 - type: jukebox # WD
-  id: SpaceAsshole
-  name: Song - Space Asshole
+  id: SpaceAssholeJukebox
+  name: "Song - Space Asshole"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceAsshole.ogg
 
 - type: jukebox # WD
-  id: SpaceShuttle
-  name: Song - Space Shuttle
+  id: SpaceShuttleJukebox
+  name: "Song - Space Shuttle"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceShuttle.ogg
 
 - type: jukebox # WD
-  id: TheSettler
-  name: Song - The Settler
+  id: TheSettlerJukebox
+  name: "Song - The Settler"
   path:
     path: /Audio/White/Music/Lobby/Songs/TheSettler.ogg
 
 - type: jukebox # WD
-  id: TheWizard
-  name: Song - The Wizard
+  id: TheWizardJukebox
+  name: "Song - The Wizard"
   path:
     path: /Audio/White/Music/Lobby/Songs/TheWizard.ogg
 
 - type: jukebox # WD
-  id: CirclesAroundTheSun
-  name: Song - Circles Around The Sun
+  id: CirclesAroundTheSunJukebox
+  name: "Song - Circles Around The Sun"
   path:
     path: /Audio/White/Music/Lobby/Songs/CirclesAroundTheSun.ogg
 
 - type: jukebox # WD
-  id: RetroFilk
-  name: Song - RetroFilk
+  id: RetroFilkJukebox
+  name: "Song - RetroFilk"
   path:
     path: /Audio/White/Music/Lobby/Songs/RetroFilk.ogg
 
 - type: jukebox # WD
-  id: AllThatICanSee
-  name: Song - All That I Can See
+  id: AllThatICanSeeJukebox
+  name: "Song - All That I Can See"
   path:
     path: /Audio/White/Music/Lobby/Songs/AllThatICanSee.ogg
+
+- type: jukebox # WD
+  id: ARealHeroJukebox
+  name: "[NEW] Song - A Real Hero"
+  path:
+    path: /Audio/White/Jukebox/Music/A_Real_Hero.ogg
+
+- type: jukebox # WD
+  id: EnjoytheSilenceJukebox
+  name: "[NEW] Song - Enjoy the Silence"
+  path:
+    path: /Audio/White/Jukebox/Music/Enjoy_the_Silence.ogg
+
+- type: jukebox # WD
+  id: INVISIBLEJukebox
+  name: "[NEW] Song - INVISIBLE"
+  path:
+    path: /Audio/White/Jukebox/Music/INVISIBLE.ogg
+
+- type: jukebox # WD
+  id: NuclearJukebox
+  name: "[NEW] Song - Nuclear"
+  path:
+    path: /Audio/White/Jukebox/Music/Nuclear.ogg
 
 # Music
 
 - type: jukebox # WD
-  id: Thunderdome
-  name: Music - Thunderdome
+  id: ThunderdomeJukebox
+  name: "Music - Thunderdome"
   path:
     path: /Audio/White/Music/Lobby/Music/thunderdome.ogg
 
 - type: jukebox # WD
-  id: Singuloose
-  name: Music - Singuloose
+  id: SingulooseJukebox
+  name: "Music - Singuloose"
   path:
     path: /Audio/White/Music/Lobby/Music/singuloose.ogg
 
 - type: jukebox # WD
-  id: LasersRipApartTheBulkhead
-  name: Music - Laser rip apart the bulkhead
+  id: LasersRipApartTheBulkheadJukebox
+  name: "Music - Laser rip apart the bulkhead"
   path:
     path: /Audio/White/Music/Lobby/Music/lasers_rip_apart_the_bulkhead.ogg
 
 - type: jukebox # WD
-  id: EveryLightIsBlinkingAtOnce
-  name: Music - Every light is blinking at once
+  id: EveryLightIsBlinkingAtOnceJukebox
+  name: "Music - Every light is blinking at once"
   path:
     path: /Audio/White/Music/Lobby/Music/every_light_is_blinking_at_once.ogg
 
 - type: jukebox # WD
-  id: AtomicAmnesiaMMX
-  name: Music - Atomic amnesia mmx
+  id: AtomicAmnesiaMMXJukebox
+  name: "Music - Atomic amnesia mmx"
   path:
     path: /Audio/White/Music/Lobby/Music/atomicamnesiammx.ogg
 
 - type: jukebox # WD
-  id: SpacSpac
-  name: Music - Spac Spac
+  id: SpacSpacJukebox
+  name: "Music - Spac Spac"
   path:
     path: /Audio/White/Music/Lobby/Music/Spac_Stac.ogg
 
 - type: jukebox # WD
-  id: CometHaley
-  name: Music - Comet Haley
+  id: CometHaleyJukebox
+  name: "Music - Comet Haley"
   path:
     path: /Audio/White/Music/Lobby/Music/comet_haley.ogg
 
 - type: jukebox # WD
-  id: Delirium
-  name: Music - Delirium
+  id: DeliriumJukebox
+  name: "Music - Delirium"
   path:
     path: /Audio/White/Music/Lobby/Music/delirium.ogg
 
 - type: jukebox # WD
-  id: MagicFly
-  name: Music - Magic Fly
+  id: MagicFlyJukebox
+  name: "Music - Magic Fly"
   path:
     path: /Audio/White/Music/Lobby/Music/magicfly.ogg
 
 - type: jukebox # WD
-  id: CrokketTheme
-  name: Music - Crokket theme
+  id: CrokketThemeJukebox
+  name: "Music - Crokket theme"
   path:
     path: /Audio/White/Music/crokett_39_s_theme.ogg
 
 - type: jukebox # WD
-  id: Guts
-  name: Music - Guts
+  id: GutsJukebox
+  name: "Music - Guts"
   path:
     path: /Audio/White/Music/guts.ogg
 
 - type: jukebox # WD
-  id: VoyageNeverEnding
-  name: Music - Voyage Never Ending
+  id: VoyageNeverEndingJukebox
+  name: "Music - Voyage Never Ending"
   path:
     path: /Audio/Ambience/voyage_neverending.ogg
 
 - type: jukebox # HONK
-  id: CosmicTemperance
-  name: Music - Cosmic Temperance
+  id: CosmicTemperanceJukebox
+  name: "Music - Cosmic Temperance"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Cosmic_Temperance.ogg
 
 - type: jukebox # WD
-  id: LibetsDelay
-  name: Music - Libets Delay
+  id: LibetsDelayJukebox
+  name: "Music - Libets Delay"
   path:
     path: /Audio/White/Music/Lobby/Music/Libets_Delay.ogg
 
 - type: jukebox # WD
-  id: ItsJustABurningMemory
-  name: Music - Its just a burning memory
+  id: ItsJustABurningMemoryJukebox
+  name: "Music - Its just a burning memory"
   path:
     path: /Audio/White/Music/Lobby/Music/Its_just_a_burning_memory.ogg
 
 - type: jukebox # HONK
-  id: AnamnesisoftheworldsSin
-  name: "[NEW] Music - Anamnesis of the world's Sin"
+  id: AnamnesisoftheworldsSinJukebox
+  name: "Music - Anamnesis of the world's Sin"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Anamnesis_of_the worlds_Sin.ogg
 
 - type: jukebox # HONK
-  id: DarkMatterMoon
-  name: "[NEW] Music - Dark Matter Moon"
+  id: DarkMatterMoonJukebox
+  name: "Music - Dark Matter Moon"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Dark_Matter_Moon.ogg
 
 - type: jukebox # HONK
-  id: EmptyOcean
-  name: "[NEW] Music - Empty Ocean"
+  id: EmptyOceanJukebox
+  name: "Music - Empty Ocean"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Empty_Ocean.ogg
 
 - type: jukebox # HONK
-  id: GoldenWinPiano
-  name: "[NEW] Music - Golden Win Piano"
+  id: GoldenWinPianoJukebox
+  name: "Music - Golden Win Piano"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Golden_Win_Piano.ogg
 
 - type: jukebox # HONK
-  id: KillerXChase
-  name: "[NEW] Music - Killer X Chase"
+  id: KillerXChaseJukebox
+  name: "Music - Killer X Chase"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Killer_X_Chase.ogg
 
 - type: jukebox # HONK
-  id: PathLootCrusaders
-  name: "[NEW] Music - PathLoot Crusaders"
+  id: PathLootCrusadersJukebox
+  name: "Music - PathLoot Crusaders"
   path:
     path: /Audio/_Honk/Jukebox/blinch_PathLoot_Crusaders.ogg
 
 - type: jukebox # HONK
-  id: PristintheMirror
-  name: "[NEW] Music - Prist in the Mirror"
+  id: PristintheMirrorJukebox
+  name: "Music - Prist in the Mirror"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Prist_in_the_Mirror.ogg
 
 - type: jukebox # HONK
-  id: StarJudgment
-  name: "[NEW] Music - Star Judgment"
+  id: StarJudgmentJukebox
+  name: "Music - Star Judgment"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Star_Judgment.ogg
 
 - type: jukebox # HONK
-  id: WheelofFaith
-  name: "[NEW] Music - Wheel of Faith"
+  id: WheelofFaithJukebox
+  name: "Music - Wheel of Faith"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Wheel_of_Faith.ogg
 
 - type: jukebox # HONK
-  id: TheUnknown
-  name: "[NEW] Music - The Unknown"
+  id: TheUnknownJukebox
+  name: "Music - The Unknown"
   path:
     path: /Audio/_Honk/Jukebox/The_Unknown.ogg
 
 - type: jukebox # HONK
-  id: EscapeintheNight
-  name: "[NEW] Music - Escape in the Night"
+  id: EscapeintheNightJukebox
+  name: "Music - Escape in the Night"
   path:
     path: /Audio/_Honk/Jukebox/Escape_in_the_Night.ogg
 
 - type: jukebox # HONK
-  id: BossTheme
-  name: "[NEW] Music - Boss Theme"
+  id: BossThemeJukebox
+  name: "Music - Boss Theme"
   path:
     path: /Audio/_Honk/Jukebox/Boss_Theme.ogg
 
 - type: jukebox # HONK
-  id: BattleThemeII
-  name: "[NEW] Music - Battle Theme II"
+  id: BattleThemeIIJukebox
+  name: "Music - Battle Theme II"
   path:
     path: /Audio/_Honk/Jukebox/Battle_Theme_II.ogg
 
 - type: jukebox # HONK
-  id: GameOver
-  name: "[NEW] Music - Game_Over..."
+  id: GameOverJukebox
+  name: "Music - Game_Over..."
   path:
     path: /Audio/_Honk/Jukebox/Game_Over.ogg
 
 - type: jukebox # HONK
-  id: TryAgain
-  name: "[NEW] Music - Try Again?"
+  id: TryAgainJukebox
+  name: "Music - Try Again?"
   path:
     path: /Audio/_Honk/Jukebox/Try_Again.ogg
 
 - type: jukebox # HONK
-  id: BeastsandBetrayal
-  name: "[NEW] Music - Beasts_and_Betrayal"
+  id: BeastsandBetrayalJukebox
+  name: "Music - Beasts_and_Betrayal"
   path:
     path: /Audio/_Honk/Jukebox/Beasts_and_Betrayal.ogg
 
 - type: jukebox # HONK
-  id: BattleThemeI
-  name: "[NEW] Music - Battle Theme I"
+  id: BattleThemeIJukebox
+  name: "Music - Battle Theme I"
   path:
     path: /Audio/_Honk/Jukebox/Battle_Theme_I.ogg
 
 - type: jukebox # HONK
-  id: HEAVENSAYSMANDELA
-  name: "[NEW] Music - HEAVEN SAYS MANDELA"
+  id: HEAVENSAYSMANDELAJukebox
+  name: "Music - HEAVEN SAYS MANDELA"
   path:
     path: /Audio/_Honk/Jukebox/HEAVEN_SAYS_MANDELA.ogg
 
 - type: jukebox # HONK
-  id: CYBERSWORLD
-  name: "[NEW] Music - CYBERS WORLD?"
+  id: CYBERSWORLDJukebox
+  name: "Music - CYBERS WORLD?"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_A_CYBERS_WORLD.ogg
 
 - type: jukebox # HONK
-  id: BIGSHOT
-  name: "[NEW] Music - BIG SHOT"
+  id: BIGSHOTJukebox
+  name: "Music - BIG SHOT"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_BIG_SHOT.ogg
 
 - type: jukebox # HONK
-  id: NOWSYOURCHANCETOBEA
-  name: "[NEW] Music - NOWS YOUR CHANCE TO BE A"
+  id: NOWSYOURCHANCETOBEAJukebox
+  name: "Music - NOWS YOUR CHANCE TO BE A"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_NOWS_YOUR_CHANCE_TO_BE_A.ogg
 
 - type: jukebox # HONK
   id: Pandora Palace
-  name: "[NEW] Music - Pandora Palace"
+  name: "Music - Pandora Palace"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_Pandora_Palace.ogg
 
 - type: jukebox # HONK
-  id: AttackoftheKillerQueen
-  name: "[NEW] Music - Attack of the Killer Queen"
+  id: AttackoftheKillerQueenJukebox
+  name: "Music - Attack of the Killer Queen"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_feat_Lena_Raine_Marcy_Nabors_Attack_of_the_Killer_Queen.ogg
+
+- type: jukebox # WD
+  id: AGazeThatInvitedDisasterJukebox
+  name: "[NEW] Music - A Gaze That Invited Disaster"
+  path:
+    path: /Audio/White/Jukebox/Music/A_Gaze_That_Invited_Disaster.ogg
+
+- type: jukebox # WD
+  id: ANeonGlowLightstheWayJukebox
+  name: "[NEW] Music - A Neon Glow Lights the Way"
+  path:
+    path: /Audio/White/Juskebox/Music/A_Neon_Glow_Lights_the_Way.ogg
+
+- type: jukebox # WD
+  id: AnotherMediumJukebox
+  name: "[NEW] Music - Another Medium"
+  path:
+    path: /Audio/White/Jukebox/Music/Another_Medium.ogg
+
+- type: jukebox # WD
+  id: COREJukebox
+  name: "[NEW] Music - CORE"
+  path:
+    path: /Audio/White/Jukebox/Music/CORE.ogg
+
+- type: jukebox # WD
+  id: CrystalsJukebox
+  name: "[NEW] Music - Crystals"
+  path:
+    path: /Audio/White/Jukebox/Music/Crystals.ogg
+
+- type: jukebox # WD
+  id: DriveMeWildJukebox
+  name: "[NEW] Music - Drive Me Wild"
+  path:
+    path: /Audio/White/Jukebox/Music/Drive_Me_Wild.ogg
+
+- type: jukebox # WD
+  id: DustJukebox
+  name: "[NEW] Music - Dust"
+  path:
+    path: /Audio/White/Jukebox/Music/Dust.ogg
+
+- type: jukebox # WD
+  id: EveryDayIsNightJukebox
+  name: "[NEW] Music - Every Day Is Night"
+  path:
+    path: /Audio/White/Jukebox/Music/Every_Day_Is_Night.ogg
+
+- type: jukebox # WD
+  id: FieldofHopesandDreamsJukebox
+  name: "[NEW] Music - Field of Hopes and Dreams"
+  path:
+    path: /Audio/White/Jukebox/Music/Field_of_Hopes_and_Dreams.ogg
+
+- type: jukebox # WD
+  id: HydrogenJukebox
+  name: "[NEW] Music - Hydrogen"
+  path:
+    path: /Audio/White/Jukebox/Music/Hydrogen.ogg
+
+- type: jukebox # WD
+  id: KnockKnockJukebox
+  name: "[NEW] Music - Knock Knock"
+  path:
+    path: /Audio/White/Jukebox/Music/Knock_Knock.ogg
+
+- type: jukebox # WD
+  id: NighttimeManeuversJukebox
+  name: "[NEW] Music - Nighttime Maneuvers"
+  path:
+    path: /Audio/White/Jukebox/Music/Nighttime_Maneuvers.ogg
+
+- type: jukebox # WD
+  id: SafeHavenJukebox
+  name: "[NEW] Music - Safe Haven"
+  path:
+    path: /Audio/White/Jukebox/Music/Safe_Haven.ogg
+
+- type: jukebox # WD
+  id: SilentFlowerJukebox
+  name: "[NEW] Music - Silent Flower"
+  path:
+    path: /Audio/White/Jukebox/Music/Silent_Flower.ogg
+
+- type: jukebox # WD
+  id: VoyagerJukebox
+  name: "[NEW] Music - Voyager"
+  path:
+    path: /Audio/White/Jukebox/Music/Voyager.ogg
+
+- type: jukebox # WD
+  id: WelcometoVA-11Hall-AJukebox
+  name: "[NEW] Music - Welcome to VA-11 Hall-A"
+  path:
+    path: /Audio/White/Jukebox/Music/Welcome_to_VA-11_Hall-A.ogg
+
+- type: jukebox # WD
+  id: You'veGotMeJukebox
+  name: "[NEW] Music - You've Got Me"
+  path:
+    path: /Audio/White/Jukebox/Music/You've_Got_Me.ogg
