--- a/Resources/Prototypes/Entities/Structures/Piping/Disposal/units.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Disposal/units.yml
@@ -66,7 +66,7 @@
   - type: PowerSwitch
   - type: Tag # WD EDIT
     tags:
-    - DisposalUnit
+    - DisposalUnits
 
 - type: entity
   id: DisposalUnit
