--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
@@ -1,5 +1,5 @@
 - type: entity
-  id: PelletShotgunResinShot
+  id: PelletShotgunRubberShot
   name: резиновая дробь (.49)
   noSpawn: true
   parent: [BaseBullet, BaseBulletTrail]
