--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
@@ -1,16 +1,16 @@
 - type: entity
-  id: ShellShotgunResinShot
-  name: shell (.49 резиновая дробь)
+  id: ShellShotgunRubberShot
+  name: ружейный патрон (.49 резиновая дробь)
   parent: BaseShellShotgun
   components:
   - type: Tag
     tags:
-    - ShellResinShotgun
+    - ShellRubberShotgun
   - type: Sprite
     layers:
     - state: rubber
       map: [ "enum.AmmoVisualLayers.Base" ]
   - type: CartridgeAmmo
-    proto: PelletShotgunResinShot
+    proto: PelletShotgunRubberShot
   - type: SpentAmmoVisuals
     state: rubber
