--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
@@ -1,24 +1,24 @@
 - type: entity
   name: травматический дробовик
   parent: BaseWeaponShotgun
-  id: WeaponResinShotgun
-  description: When an old Remington design meets modern materials, this is the result. A favourite weapon of militia forces throughout many worlds. Uses .50 shotgun shells.
+  id: WeaponRubberShotgun
+  description: Вот что выходит, когда старый дизайн Ремингтона соединяется с современными материалами. Модифицирован под миротворческие нужны Службы Безопасности. Использует патроны калибра .49 ружейный.
   components:
   - type: Item
     size: Normal
     shape:
     - 0,0,4,0
-    sprite: White/Objects/Weapons/Guns/Shotguns/pump_inhands_64x.rsi
+    sprite: White/Objects/Weapons/Guns/Shotguns/rubber_pump_inhands_64x.rsi
   - type: Sprite
-    sprite: White/Objects/Weapons/Guns/Shotguns/pump.rsi
+    sprite: White/Objects/Weapons/Guns/Shotguns/rubber_pump.rsi
   - type: Clothing
-    sprite: White/Objects/Weapons/Guns/Shotguns/pump.rsi
+    sprite: White/Objects/Weapons/Guns/Shotguns/rubber_pump_onbody.rsi
   - type: BallisticAmmoProvider
-    proto: ShellShotgunResinShot
+    proto: ShellShotgunRubberShot
     capacity: 6
     whitelist:
       tags:
-      - ShellResinShotgun
+      - ShellRubberShotgun
   - type: Tag
     tags:
-    - WeaponResinShotgun
+    - WeaponRubberShotgun
